{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 55,
  "lineage": "4bffe406-048c-673a-e56c-face2c4574dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015b84846fc3db85f",
            "arn": "arn:aws:ec2:us-east-1:339713021565:elastic-ip/eipalloc-015b84846fc3db85f",
            "association_id": "eipassoc-0b728b7e906f4fed9",
            "domain": "vpc",
            "id": "eipalloc-015b84846fc3db85f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-038715b4303dca95e",
            "private_dns": "ip-10-0-66-208.ec2.internal",
            "private_ip": "10.0.66.208",
            "public_dns": "ec2-34-200-102-255.compute-1.amazonaws.com",
            "public_ip": "34.200.102.255",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb93f16af29730ca",
            "arn": "arn:aws:ec2:us-east-1:339713021565:elastic-ip/eipalloc-0cb93f16af29730ca",
            "association_id": "eipassoc-043c684991b23772c",
            "domain": "vpc",
            "id": "eipalloc-0cb93f16af29730ca",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ec251bdde91506f8",
            "private_dns": "ip-10-0-116-192.ec2.internal",
            "private_ip": "10.0.116.192",
            "public_dns": "ec2-75-101-136-32.compute-1.amazonaws.com",
            "public_ip": "75.101.136.32",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-zone2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-zone2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:339713021565:instance/i-05ed9e3ca66366a24",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ed9e3ca66366a24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d62efb17686b7e06",
            "private_dns": "ip-10-0-94-32.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.94.32",
            "public_dns": "ec2-98-80-78-25.compute-1.amazonaws.com",
            "public_ip": "98.80.78.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-017d1c4091f2c0fbc",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-09c2ae2aa40eb3c38"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060d32d5294cdb7a3",
            "tags": {
              "Name": "Monitoring Server"
            },
            "tags_all": {
              "Name": "Monitoring Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c2ae2aa40eb3c38"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public_zone1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713021565:internet-gateway/igw-00150a0aba9dbb4fd",
            "id": "igw-00150a0aba9dbb4fd",
            "owner_id": "339713021565",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nodejs-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339713021565:loadbalancer/app/nodejs-load-balancer/763abaadeec209b6",
            "arn_suffix": "app/nodejs-load-balancer/763abaadeec209b6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nodejs-load-balancer-872585339.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:339713021565:loadbalancer/app/nodejs-load-balancer/763abaadeec209b6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nodejs-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07840c312014175f1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-041f5a2112c84ed9a"
              },
              {
                "subnet_id": "subnet-060d32d5294cdb7a3"
              }
            ],
            "subnets": [
              "subnet-041f5a2112c84ed9a",
              "subnet-060d32d5294cdb7a3"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "nodejs-load-balancer"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nodejs-load-balancer"
            },
            "vpc_id": "vpc-0bc50a3a2460b3677",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_zone1",
            "aws_subnet.public_zone2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "python-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339713021565:loadbalancer/app/python-load-balancer/2bbe29d03e1ae9cf",
            "arn_suffix": "app/python-load-balancer/2bbe29d03e1ae9cf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "python-load-balancer-373333557.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:339713021565:loadbalancer/app/python-load-balancer/2bbe29d03e1ae9cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "python-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07840c312014175f1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-041f5a2112c84ed9a"
              },
              {
                "subnet_id": "subnet-060d32d5294cdb7a3"
              }
            ],
            "subnets": [
              "subnet-041f5a2112c84ed9a",
              "subnet-060d32d5294cdb7a3"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "python-load-balancer"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "python-load-balancer"
            },
            "vpc_id": "vpc-0bc50a3a2460b3677",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_zone1",
            "aws_subnet.public_zone2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339713021565:listener/app/nodejs-load-balancer/763abaadeec209b6/6ddd5d741ef34345",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339713021565:targetgroup/nodejs-target-group/93c07ae2b5bdfa35",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339713021565:listener/app/nodejs-load-balancer/763abaadeec209b6/6ddd5d741ef34345",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:339713021565:loadbalancer/app/nodejs-load-balancer/763abaadeec209b6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "http-listener"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "http-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nodejs-lb",
            "aws_lb_target_group.nodejs_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "python-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339713021565:listener/app/python-load-balancer/2bbe29d03e1ae9cf/4ee48c6ed3853e5c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339713021565:targetgroup/python-target-group/54e17ab2763330cf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339713021565:listener/app/python-load-balancer/2bbe29d03e1ae9cf/4ee48c6ed3853e5c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:339713021565:loadbalancer/app/python-load-balancer/2bbe29d03e1ae9cf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "http-listener"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "http-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.python-lb",
            "aws_lb_target_group.python_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nodejs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339713021565:targetgroup/nodejs-target-group/93c07ae2b5bdfa35",
            "arn_suffix": "targetgroup/nodejs-target-group/93c07ae2b5bdfa35",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339713021565:targetgroup/nodejs-target-group/93c07ae2b5bdfa35",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:339713021565:loadbalancer/app/nodejs-load-balancer/763abaadeec209b6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nodejs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "nodejs-target-group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nodejs-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "python_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339713021565:targetgroup/python-target-group/54e17ab2763330cf",
            "arn_suffix": "targetgroup/python-target-group/54e17ab2763330cf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339713021565:targetgroup/python-target-group/54e17ab2763330cf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:339713021565:loadbalancer/app/python-load-balancer/2bbe29d03e1ae9cf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "python-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "python-target-group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "python-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015b84846fc3db85f",
            "association_id": "eipassoc-0b728b7e906f4fed9",
            "connectivity_type": "public",
            "id": "nat-04dbb8f555e3f3284",
            "network_interface_id": "eni-038715b4303dca95e",
            "private_ip": "10.0.66.208",
            "public_ip": "34.200.102.255",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-060d32d5294cdb7a3",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_zone1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb93f16af29730ca",
            "association_id": "eipassoc-043c684991b23772c",
            "connectivity_type": "public",
            "id": "nat-07d3bd8f427d19f1c",
            "network_interface_id": "eni-0ec251bdde91506f8",
            "private_ip": "10.0.116.192",
            "public_ip": "75.101.136.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-041f5a2112c84ed9a",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-zone2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-zone2"
            }
          },
          "dependencies": [
            "aws_eip.nat_zone2",
            "aws_subnet.public_zone2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713021565:route-table/rtb-013b499f36a5de0fc",
            "id": "rtb-013b499f36a5de0fc",
            "owner_id": "339713021565",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04dbb8f555e3f3284",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713021565:route-table/rtb-066290a31349f0841",
            "id": "rtb-066290a31349f0841",
            "owner_id": "339713021565",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00150a0aba9dbb4fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0724a5435b6c4565e",
            "route_table_id": "rtb-013b499f36a5de0fc",
            "subnet_id": "subnet-02716860c5d0f28fc"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_zone1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd0808e6f6e0110d",
            "route_table_id": "rtb-013b499f36a5de0fc",
            "subnet_id": "subnet-09c8c48c129502015"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_zone2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2d26889422afe69",
            "route_table_id": "rtb-066290a31349f0841",
            "subnet_id": "subnet-060d32d5294cdb7a3"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_zone1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00784c85c9b043013",
            "route_table_id": "rtb-066290a31349f0841",
            "subnet_id": "subnet-041f5a2112c84ed9a"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_zone2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713021565:security-group/sg-07840c312014175f1",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07840c312014175f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "339713021565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "alb-security-group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713021565:security-group/sg-09c2ae2aa40eb3c38",
            "description": "Security group for EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c2ae2aa40eb3c38",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2-security-group",
            "name_prefix": "",
            "owner_id": "339713021565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ec2-security-group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713021565:security-group/sg-048148bdeb0b0c2c0",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048148bdeb0b0c2c0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09c2ae2aa40eb3c38"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "339713021565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "rds-security-group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713021565:subnet/subnet-02716860c5d0f28fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02716860c5d0f28fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713021565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713021565:subnet/subnet-09c8c48c129502015",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c8c48c129502015",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713021565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713021565:subnet/subnet-060d32d5294cdb7a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060d32d5294cdb7a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713021565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713021565:subnet/subnet-041f5a2112c84ed9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041f5a2112c84ed9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713021565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bc50a3a2460b3677"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713021565:vpc/vpc-0bc50a3a2460b3677",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060e314ec1deb116f",
            "default_route_table_id": "rtb-08b5366ac07a79e06",
            "default_security_group_id": "sg-05e5c0ae2a76d1b1b",
            "dhcp_options_id": "dopt-09c135f1e2040835e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc50a3a2460b3677",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b5366ac07a79e06",
            "owner_id": "339713021565",
            "tags": {
              "Environment": "dev",
              "Name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}